[gd_scene load_steps=2 format=3 uid="uid://d5t7k2m9q3n8p"]

[ext_resource type="Script" path="res://src/ui/SaveGameMenu.gd" id="1"]

[node name="SaveGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Save Game"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SlotsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Overwrite Save?"
initial_position = 2
size = Vector2i(400, 150)
ok_button_text = "Overwrite"
cancel_button_text = "Cancel"

[node name="RenameDialog" type="AcceptDialog" parent="."]
title = "Rename Save Slot"
initial_position = 2
size = Vector2i(400, 150)
ok_button_text = "Rename"

[node name="MarginContainer" type="MarginContainer" parent="RenameDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 100.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="RenameDialog/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="RenameDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter new name for this save:"

[node name="RenameInput" type="LineEdit" parent="RenameDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Save name..."
max_length = 50
